5. Валидация параметров запуска. [#438554]